# rust-initializer

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .rustfmt.toml  .taplo.toml  AGENTS.md  Cargo.toml  Makefile.toml  README.md  STYLE_RUST.md  build.rs
.github/: dependabot.yml  ruleset-any.json  ruleset-default.json  rulesets-default.json  rulesets.json
.github/rulesets/: any.json  default.json
.github/workflows/: checks.yml  language.yml  pages.yml  release.yml  rust.yml  staging.yml
docs/: governance.md  index.md
docs/guide/: index.md
docs/guide/development/: dependency_upgrade_workflow.md  rust_style_guide.md
docs/guide/development/languages/: index.md  rust.md
docs/spec/: index.md
src/: cli.rs  main.rs
