[package]
authors     = ["Xavier Lau <x@acg.box>"]
build       = "build.rs"
description = "<DESCRIPTION>"
edition     = "2024"
homepage    = "https://hack.ink/<NAME>"
license     = "GPL-3.0"
name        = "<NAME>"
readme      = "README.md"
repository  = "https://github.com/hack-ink/<NAME>"
resolver    = "3"
version     = "0.1.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "1.0", features = ["cargo"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
app_dirs2          = { version = "2.5" }
clap               = { version = "4.5", features = ["derive"] }
color-eyre         = { version = "0.6" }
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
